--- a/src/index.sass
+++ b/src/index.sass
@@ -1,5 +1,5 @@
-body
-  margin: 0
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
+@import './styles/reset'
+@import './styles/vars'
+@import './styles/grid'
+@import './styles/typography'
+@import './styles/base'
