Create page header & button components

--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -13,10 +13,10 @@
     display: flex
     align-items: center
     gap: 40px
-    &__item
-      font-size: 20px
-      font-weight: 600
 
+  &__menu__item,
   &__tail
+    font-family: "Open Sans", sans-serif
     font-size: 20px
     font-weight: 600
+    color: var(--color-text-secondary)
