--- a/src/styles/_typography.sass
+++ b/src/styles/_typography.sass
@@ -1,3 +1,10 @@
 *
-  font-family: "Open Sans", sans-serif
-  color: var(--color-text)
+  font-family: "Poppins", sans-serif
+  color: var(--color-text-primary)
+
+h1, h2, h3, h4, h5, h6
+  font-weight: 700
+
+h1
+  font-size: 40px
+  line-height: 60px
