Create property grid

--- a/src/components/Button/Button.sass
+++ b/src/components/Button/Button.sass
@@ -1,6 +1,5 @@
 .btn
-  width: 310px
-  height: 66px
+  height: 60px
   border: 1.5px solid var(--color-text-primary)
   outline: none
   font-size: 24px
@@ -12,8 +11,9 @@
   justify-content: center
   gap: 12px
   flex-shrink: 0
-  cursor: pointer
   transition: all .6s ease-in-out
+  cursor: pointer
+  padding: 16px
 
   svg
     color: inherit
