Fix page header responsive

--- a/src/components/PageHeader/PageHeader.sass
+++ b/src/components/PageHeader/PageHeader.sass
@@ -2,7 +2,11 @@
   display: flex
   align-items: center
   justify-content: space-between
+  gap: 24px
   margin-bottom: 80px
 
   h1
-    width: 730px
+    width: 660px
+
+  @media (max-width: 1024px)
+    flex-wrap: wrap
